osm/tls-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tls-test-pod
spec:
  containers:
  - name: tls-test
    image: ubuntu:latest
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi"
      limits:
        cpu: "200m"
        memory: "128Mi"
