osm/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookbuyer
  namespace: bookbuyer
  labels:
    app: bookbuyer
spec:
  ports:
  - port: 14001
    name: inbound-port
  selector:
    app: bookbuyer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookbuyer-ingress
  namespace: bookbuyer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bookbuyer.aks.clarenceb.com
      http:
        paths:
        - path: /
          backend:
            serviceName: bookbuyer
            servicePort: 14001
  backend:
    serviceName: bookbuyer
    servicePort: 14001
---
apiVersion: v1
kind: Service
metadata:
  name: bookthief
  namespace: bookthief
  labels:
    app: bookthief
spec:
  ports:
  - port: 14001
    name: inbound-port
  selector:
    app: bookthief
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookthief-ingress
  namespace: bookthief
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bookthief.aks.clarenceb.com
      http:
        paths:
        - path: /
          backend:
            serviceName: bookthief
            servicePort: 14001
  backend:
    serviceName: bookthief
    servicePort: 14001
